--- a/.env.production
+++ b/.env.production
@@ -1,16 +1,21 @@
 # Token and api keys
-TELEGRAM_BOT_TOKEN=""        																							 # REQUIRED
-OPENAI_API_KEY=""       																									 # REQUIRED
-YANDEX_API_KEY=""                 																				 # REQUIRED: If SPEECH_TO_TEXT_MODE="yandex" or TEXT_TO_SPEECH_MODE="yandex"
+TELEGRAM_BOT_TOKEN=""        												# REQUIRED
+OPENAI_API_KEY=""       														# REQUIRED
+YANDEX_API_KEY=""                  									# REQUIRED: if SPEECH_TO_TEXT_MODE="yandex" or TEXT_TO_SPEECH_MODE="yandex"
 # Main settings
-VOICE_RESPONSE="true"                                                      # 'true' or 'false'
-SPEECH_TO_TEXT_MODE="yandex"                                           		 # 'openai' or 'yandex'
-TEXT_TO_SPEECH_MODE="yandex"  																					   # 'google' or 'yandex' or 'any'
-SAVE_CHAT_HISTORY="true"                                                   # 'true' or 'false'
+VOICE_RESPONSE="true"                               # "true" or "false"
+SPEECH_TO_TEXT_MODE="yandex"                        # "openai" or "yandex"
+TEXT_TO_SPEECH_MODE="any"  													# "google", "yandex" or "any"
+SAVE_CHAT_HISTORY="true"                            # "true" or "false"
+SAVE_VOICE_HISTORY="any" 														# "request", "response", "any" or "false"
+# Yandex TTS settings
+VOICE_SPEED_NORMAL="1.5"                            # "1.0" - "2.0" Default: "1.5"
+VOICE_SPEED_SLOW="1.2" 															# "1.0" - "2.0" Default: "1.2"
+VOICE_SPEED_FAST="1.8"															# "1.0" - "2.0" Default: "1.8"
 # Logger settings
-LOG_MODE="together"                              													 # Please use "one_file", "different_files" or "together"
+LOG_MODE="together"                              		# Please use "one_file", "different_files" or "together"
 LOG_PATH="./log"
-LOG_FILENAME="common.log.txt"                    													 # Used with the option "one_file" and "together"
-LOG_FILENAME_INFO="info.log.txt"                 													 # Used with the option "different_files" and "together"
-LOG_FILENAME_WARNING="warnings.log.txt"          													 # Used with the option "different_files" and "together"
-LOG_FILENAME_ERROR="errors.log.txt"              													 # Used with the option "different_files" and "together"
+LOG_FILENAME="common.log.txt"                    		# Used with the option "one_file" and "together" Example: "common.log.txt"
+LOG_FILENAME_INFO="info.log.txt"                 		# Used with the option "different_files" and "together" Example: "info.log.txt"
+LOG_FILENAME_WARNING="warnings.log.txt"          		# Used with the option "different_files" and "together" Example: "warnings.log.txt"
+LOG_FILENAME_ERROR="errors.log.txt"              		# Used with the option "different_files" and "together" Example: "errors.log.txt"
