--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /log/*
 !log/do_not_delete_this_directory
 /audio/*
+!audio/request
+!audio/response
 !audio/request/do_not_delete_this_directory
 !audio/response/do_not_delete_this_directory
 /node_modules/
